# keyple-demo-ticketing

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  libs.versions.toml
.github/workflows/: build-and-test.yml  ci-main-and-pr.yml  publish-release.yml  release-tag.yml  reusable-android-ci.yml  reusable-android-gradle-build.yml  reusable-android-release.yml  reusable-desktop-multiplatform-build.yml  reusable-dotnet-build.yml  reusable-dotnet-ci.yml  reusable-dotnet-release.yml  reusable-java-node-ci.yml  reusable-java-node-hybrid-build.yml  reusable-java-node-release.yml  reusable-kmp-android-ios-ci.yml  reusable-kmp-desktop-release.yml  reusable-kmp-ios-ci.yml  reusable-multiplatform-desktop-release.yml
libs/: keyple-plugin-cna-arrive-android-jvm-lib-3.0.0-debug-mock.aar  keyple-plugin-cna-bluebird-specific-nfc-java-lib-3.1.1-release-mock.aar  keyple-plugin-cna-bluebird-specific-nfc-java-lib-3.2.0-debug-mock.aar
src/common/: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
src/common/src/main/kotlin/org/calypsonet/keyple/demo/common/constant/: CardConstant.kt
src/common/src/main/kotlin/org/calypsonet/keyple/demo/common/constants/: CardConstants.kt  RemoteServiceId.kt
src/common/src/main/kotlin/org/calypsonet/keyple/demo/common/data/: LocationRepository.kt
src/common/src/main/kotlin/org/calypsonet/keyple/demo/common/mappers/: LocationMapper.kt
src/common/src/main/kotlin/org/calypsonet/keyple/demo/common/model/: Location.kt
src/common/src/main/kotlin/org/calypsonet/keyple/demo/common/parsers/: ContractStructureParser.kt  EnvironmentHolderStructureParser.kt  EventStructureParser.kt  Parser.kt  ScContractStructureParser.kt  ScEnvironmentHolderStructureParser.kt  ScEventStructureParser.kt
src/common/src/test/kotlin/org/calypsonet/keyple/demo/common/parsers/: ContractInfoStructureParserTest.kt  EnvironmentHolderStructureParserTest.kt  EventStructureParserTest.kt
src/control/: CHANGELOG.md  README.md  gradle.properties  settings.gradle.kts
src/control/app/: build.gradle.kts  proguard-rules.pro
src/control/app/src/main/kotlin/org/calypsonet/keyple/demo/control/data/: CalypsoCardImpl.kt  CalypsoCardRepository.kt  KeypopApiProviderImpl.kt  LocationRepository.kt  MifareClassicKeyProvider.kt  MifareClassicKeyProviderImpl.kt  ReaderManagerImpl.kt  ReaderRepository.kt  StorageCardImpl.kt  (+1 more)
src/control/app/src/main/res/layout/: activity_device_selection.xml
src/control/app/src/main/res/values/: strings.xml
src/reloading-remote/: CHANGELOG.md  README.md
src/reloading-remote/client/interop-mobile-multiplatform/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
src/reloading-remote/client/interop-mobile-multiplatform/composeApp/: build.gradle.kts
src/reloading-remote/client/interop-mobile-multiplatform/iosApp/iosApp/: ContentView.swift
src/reloading-remote/client/keyple-mobile-android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
src/reloading-remote/client/keyple-mobile-android/app/: build.gradle.kts  proguard-rules.pro
src/reloading-remote/client/keyple-mobile-android/app/src/main/: AndroidManifest.xml
src/reloading-remote/client/pc-dotnet/: App.csproj  README.md
src/reloading-remote/server/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
src/reloading-remote/server/dashboard-app/: package.json
src/reloading-remote/server/dashboard-app/src/layout/: AlertDialog.js  App.js  CollapsibleTable.js  Copyright.js  Header.js  Navigator.js
src/reloading-remote/server/dashboard-app/src/layout/util/: theme.js  useInterval.js
src/validation/: CHANGELOG.md  README.md  gradle.properties  settings.gradle.kts
src/validation/app/: ARCHITECTURE_HEXAGONALE.md  build.gradle.kts  proguard-rules.pro
src/validation/app/src/main/: AndroidManifest.xml
src/validation/app/src/main/assets/: error_white.json  present_card_white.json  tick_white.json
src/validation/app/src/main/kotlin/org/calypsonet/keyple/demo/validation/: Application.kt
src/validation/app/src/main/res/layout/: activity_card_reader.xml  activity_device_selection.xml  activity_home.xml  layout_card_summary_overlay.xml
src/validation/app/src/main/res/layout-land/: activity_card_reader.xml  activity_device_selection.xml  activity_home.xml  activity_settings.xml  layout_card_summary_overlay.xml
src/validation/app/src/main/res/values/: strings.xml
validation-cpp-qt/: .gitignore  CMakeLists.txt  README.md  TODO.md
validation-cpp-qt/docs/: ARCHITECTURE.md  BUILD.md  MIGRATION.md  QUICKSTART.md
validation-cpp-qt/resources/: resources.qrc
validation-cpp-qt/resources/images/: README.md
validation-cpp-qt/src/: CMakeLists.txt  main.cpp
validation-cpp-qt/src/core/constants/: Messages.cpp  Messages.h
validation-cpp-qt/src/core/logging/: Logger.cpp  Logger.h
validation-cpp-qt/src/data/repository/: CalypsoCardRepository.cpp  CalypsoCardRepository.h  LocationRepository.cpp  LocationRepository.h  ReaderRepository.cpp  ReaderRepository.h  StorageCardRepository.cpp  StorageCardRepository.h
validation-cpp-qt/src/domain/exception/: ValidationException.h
validation-cpp-qt/src/domain/mapper/: LocationMapper.cpp  LocationMapper.h  ValidationMapper.cpp  ValidationMapper.h
validation-cpp-qt/src/domain/model/: AppSettings.cpp  AppSettings.h  CardProtocolEnum.h  CardReaderResponse.cpp  CardReaderResponse.h  Location.cpp  Location.h  ReaderType.h  Status.h  Validation.cpp  Validation.h
validation-cpp-qt/src/domain/rules/: ValidationRules.cpp  ValidationRules.h
validation-cpp-qt/src/domain/service/: TicketingService.cpp  TicketingService.h
validation-cpp-qt/src/ui/cardsummary/: CardSummaryDialog.cpp  CardSummaryDialog.h  CardSummaryDialog.ui
validation-cpp-qt/src/ui/main/: MainWindow.cpp  MainWindow.h  MainWindow.ui
validation-cpp-qt/src/ui/reader/: ReaderWidget.cpp  ReaderWidget.h  ReaderWidget.ui
validation-cpp-qt/src/ui/settings/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
validation-cpp-qt/src/ui/splash/: SplashScreen.cpp  SplashScreen.h  SplashScreen.ui
(+288 files in other folders)
